--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "react": "^18.0.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-plx": "^1.3.17",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-text-transition": "^1.3.0",
+    "react-video-js-player": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
