--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "profile_front_end",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+  "node": "16.13.2"
+},
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
