--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-plx": "^1.3.17",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.2",
