--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-plx": "^1.3.17",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-text-transition": "^1.3.0",
     "react-video-js-player": "^1.1.1",
     "web-vitals": "^2.1.4"
