--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^0.26.1",
+    "latest": "^0.2.0",
     "react": "^18.0.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.0.0",
